--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,7 +32,7 @@
   <!-- Inline CSS cho navbar gradient và font -->
   <style>
     :root {
-      --nav-gradient-start: #FFCDD2;  /* pastel hồng */
+      --nav-gradient-start: #f9cdff;  /* pastel hồng */
       --nav-gradient-end:   #BBDEFB;  /* pastel xanh */
     }
 
@@ -54,7 +54,7 @@
 <body>
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="{% url 'home' %}">HỆ THỐNG QUẢN LÝ</a>
+    <a class="navbar-brand" href="{% url 'home' %}">QUẢN LÝ BỮA ĂN</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
