--- a/templates/index.html
+++ b/templates/index.html
@@ -254,6 +254,7 @@
     <!-- BANNER WITH TEXT/BUTTON ROW THEN IMAGE ROW -->
     <div class="banner">
       <h2>Sẵn sàng quản lý bữa ăn cho học sinh?</h2>
+      <a href="{% url 'meals:meal_bulk_create' %}" class="cta-btn">Nhập Dữ liệu Bữa Ăn Ngay</a>
       <img src="{% static 'images/3vegetablebow.png' %}" alt="Minh họa bữa ăn" class="banner-image">
     </div>
   </div>
